--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PNG → GLSL 16×16</title>
+<title>PNG to Shader Editor (GLES 300) 16×16 Only</title>
 <style>
 :root{
   --bg:#0f1720;
@@ -31,7 +31,7 @@ button:disabled{opacity:0.45;cursor:default}
 </head>
 <body>
   <main class="container">
-    <h1>PNG → GLSL 16×16</h1>
+    <h1>PNG to GLSL 16×16</h1>
 
     <label class="file-row">
       <span>Pilih file PNG 16×16</span>
