--- a/index.html
+++ b/index.html
@@ -1,169 +1,400 @@
 <!doctype html>
-<html lang="id">
+<html lang="en">
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>PNG(16x16) to Shader Editor</title>
+<title>Image → Shader</title>
 <style>
-:root{
-  --bg:#0f1720;
-  --card:#0b1220;
-  --accent:#9ad66b;
-  --text:#e6eef7;
-}
-*{box-sizing:border-box}
-html,body{height:100%;margin:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue",Arial;color:var(--text);background:linear-gradient(180deg,#071018 0%, #0b1220 100%);-webkit-font-smoothing:antialiased}
-.container{max-width:980px;margin:28px auto;padding:20px;background:rgba(255,255,255,0.02);border-radius:12px}
-h1{margin:0 0 14px;font-size:20px;color:var(--accent)}
-.file-row{display:flex;align-items:center;gap:12px;margin-bottom:12px}
-.file-row input[type=file]{display:inline-block}
-.controls{display:flex;gap:8px;margin-bottom:12px}
-button{background:#1f2a36;border:1px solid rgba(255,255,255,0.04);color:var(--text);padding:8px 12px;border-radius:8px;cursor:pointer}
-button:disabled{opacity:0.45;cursor:default}
-.preview-row{display:flex;gap:16px;align-items:flex-start}
-.preview-box{display:flex;flex-direction:column;align-items:center;gap:8px;width:280px}
-.preview-box img{width:256px;height:256px;image-rendering:pixelated;border-radius:6px;border:1px solid rgba(255,255,255,0.04);background:#222}
-.note{font-size:12px;color:#9fb1c9;margin:0}
-.shader-box{flex:1}
-.shader-output{white-space:pre-wrap;background:#07121a;padding:12px;border-radius:8px;min-height:256px;overflow:auto;border:1px solid rgba(255,255,255,0.03)}
+  :root{
+    --bg:#0b1220; --card:#0f1724; --panel:#071029; --muted:#93a0b5; --accent:#1f6feb;
+    --gap:12px; --radius:10px;
+  }
+  *{box-sizing:border-box}
+  body{
+    margin:0;
+    font-family:Inter,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
+    background:var(--bg);
+    color:#e6eef6;
+    padding:16px;
+  }
+
+  .layout{display:flex;flex-direction:column;gap:16px}
+  @media(min-width:960px){ .layout{flex-direction:row} }
+
+  .panel{
+    background:linear-gradient(180deg,var(--card),#081226);
+    padding:12px;
+    border-radius:var(--radius);
+    box-shadow:0 6px 18px rgba(0,0,0,.45);
+  }
+
+  .left{display:flex;flex-direction:column;gap:12px;min-width:280px}
+  .right{display:flex;flex-direction:column;gap:8px;flex:1}
+
+  label{display:flex;flex-direction:column;gap:6px;font-size:13px;color:var(--muted)}
+  input[type=file], select, button, textarea{
+    padding:8px;border-radius:8px;border:1px solid rgba(255,255,255,.06);
+    background:var(--panel);color:#e6eef6;font-size:14px;
+  }
+
+  .controls{display:flex;gap:8px;flex-wrap:wrap}
+  button{cursor:pointer;border:none}
+  button:disabled{opacity:.35;cursor:not-allowed}
+
+  .preview-wrap{display:flex;flex-direction:column;align-items:center;gap:8px}
+  img#preview{image-rendering:pixelated;border-radius:6px;border:1px solid rgba(255,255,255,.04);background:#06111b}
+
+  textarea#editor{
+    width:100%;min-height:360px;background:#021024;color:#e6eef6;padding:12px;border-radius:8px;border:1px solid rgba(255,255,255,.03);
+    font-family:SFMono-Regular,Menlo,Monaco,monospace;font-size:13px;resize:vertical;white-space:pre-wrap;
+  }
+
+  .meta{font-size:12px;color:var(--muted);display:flex;justify-content:space-between;gap:8px;align-items:center}
+  .small{font-size:12px;color:var(--muted)}
+
+  @media(min-width:960px){ .left{width:360px;flex:0 0 360px} }
+
+  .row{display:flex;gap:8px;align-items:center}
 </style>
 </head>
 <body>
-  <main class="container">
-    <h1>PNG(16x16) to Shader Editor</h1>
 
-    <label class="file-row">
-      <span>Select PNG 16x16</span>
-      <input id="file" type="file" accept="image/png">
+<div class="layout">
+  <div class="panel left">
+    <label>
+      Select image
+      <input id="file" type="file" accept="image/*">
+    </label>
+
+    <div class="row" style="gap:10px">
+      <label style="flex:1">
+        Target size
+        <select id="size">
+          <option value="16">16 × 16</option>
+          <option value="32">32 × 32</option>
+          <option value="64">64 × 64</option>
+        </select>
+      </label>
+
+      <label style="width:150px">
+        Output target
+        <select id="target">
+          <option value="editor">Shader Editor</option>
+          <option value="shadertoy">Shadertoy</option>
+        </select>
+      </label>
+    </div>
+
+    <label id="versionLabel">
+      GLSL version (Shader Editor only)
+      <select id="versionSelect">
+        <option value="300">GLES 300 ES (#version 300 es)</option>
+        <option value="100">GL 100 (legacy)</option>
+      </select>
     </label>
 
     <div class="controls">
-      <a id="downloadShader" download="" style="text-decoration:none">
-        <button id="btnShader" disabled>Download Shader (.frag)</button>
-      </a>
-      <a id="downloadPreview" download="" style="text-decoration:none">
-        <button id="btnPreview" disabled>Download Preview (PNG)</button>
-      </a>
+      <button id="generateBtn" disabled>Generate</button>
+      <button id="downloadBtn" disabled>Download .frag</button>
+      <button id="copyBtn" disabled>Copy</button>
+      <button id="downloadPreviewBtn" disabled>Download PNG</button>
     </div>
 
-    <section class="preview-row">
-      <div class="preview-box">
-        <img id="previewImg" alt="preview" width="256" height="256">
-        <p class="note">Preview</p>
+    <div class="preview-wrap" style="margin-top:6px">
+      <div style="width:256px;height:256px;display:flex;align-items:center;justify-content:center">
+        <img id="preview" width="256" height="256" alt="preview">
       </div>
+      <div class="small">Upscaled preview</div>
+    </div>
+  </div>
 
-      <div class="shader-box">
-        <pre id="out" class="shader-output" spellcheck="false"></pre>
-      </div>
-    </section>
+  <div class="panel right">
+    <div class="meta">
+      <div class="small">Shader — generated code</div>
+      <div class="small">Size: <span id="selSize">16×16</span></div>
+    </div>
 
-  </main>
+    <textarea id="editor" spellcheck="false">Upload an image to generate shader...</textarea>
+  </div>
+</div>
+
+<canvas id="work" style="display:none"></canvas>
 
 <script>
 const fileInput = document.getElementById('file');
-const out = document.getElementById('out');
-const previewImg = document.getElementById('previewImg');
-const downloadShader = document.getElementById('downloadShader');
-const downloadPreview = document.getElementById('downloadPreview');
-const btnShader = document.getElementById('btnShader');
-const btnPreview = document.getElementById('btnPreview');
+const sizeSel = document.getElementById('size');
+const targetSel = document.getElementById('target');
+const versionSelect = document.getElementById('versionSelect');
+const versionLabel = document.getElementById('versionLabel');
 
-function toFixed6(n){ return (n/255).toFixed(6); }
+const generateBtn = document.getElementById('generateBtn');
+const downloadBtn = document.getElementById('downloadBtn');
+const copyBtn = document.getElementById('copyBtn');
+const downloadPreviewBtn = document.getElementById('downloadPreviewBtn');
 
-function buildShaderFromImage(imgName, img16Data) {
-  const lines = [];
-  for(let y=0;y<16;y++){
-    for(let x=0;x<16;x++){
-      const i = (y*16 + x) * 4;
-      let r = img16Data[i], g = img16Data[i+1], b = img16Data[i+2], a = img16Data[i+3];
-      if(a < 255){
-        const af = a/255;
-        r = Math.round(r*af);
-        g = Math.round(g*af);
-        b = Math.round(b*af);
-      }
-      const comma = (y*16 + x) < 255 ? "," : "";
-      lines.push("  vec3(" + toFixed6(r) + ", " + toFixed6(g) + ", " + toFixed6(b) + ")" + comma);
-    }
+const editor = document.getElementById('editor');
+const preview = document.getElementById('preview');
+const work = document.getElementById('work');
+const selSize = document.getElementById('selSize');
+
+let currentImage = null;
+let lastImageData = null;
+
+fileInput.addEventListener('change', (e)=>{
+  const f = e.target.files && e.target.files[0];
+  if(!f){ disableAll(); return; }
+  if(!f.type.startsWith('image/')){ alert('Please select an image file.'); disableAll(); return; }
+  const url = URL.createObjectURL(f);
+  const img = new Image();
+  img.crossOrigin = "anonymous";
+  img.onload = ()=>{
+    currentImage = img;
+    generateBtn.disabled = false;
+    renderPreviewScaled();
+  };
+  img.onerror = ()=>{ alert('Failed to load image.'); disableAll(); };
+  img.src = url;
+});
+
+sizeSel.addEventListener('change', ()=>{ selSize.textContent = sizeSel.value + '×' + sizeSel.value; if(currentImage) renderPreviewScaled(); });
+targetSel.addEventListener('change', ()=>{ if(targetSel.value === 'shadertoy'){ versionSelect.disabled = true; versionLabel.style.opacity = 0.6; } else { versionSelect.disabled = false; versionLabel.style.opacity = 1; } });
+
+function disableAll(){
+  generateBtn.disabled = true;
+  downloadBtn.disabled = true;
+  downloadPreviewBtn.disabled = true;
+  copyBtn.disabled = true;
+  preview.src = '';
+  editor.value = 'Upload an image to generate shader...';
+  lastImageData = null;
+}
+
+function renderPreviewScaled(){
+  const N = parseInt(sizeSel.value,10);
+  const img = currentImage;
+  work.width = N; work.height = N;
+  const ctx = work.getContext('2d');
+  ctx.imageSmoothingEnabled = false;
+
+  const arImg = img.width / img.height;
+  let sx=0, sy=0, sw=img.width, sh=img.height;
+  if(arImg > 1){
+    sh = img.height;
+    sw = Math.round(sh * arImg);
+    sx = Math.round((img.width - sw)/2);
+  } else {
+    sw = img.width;
+    sh = Math.round(sw / arImg);
+    sy = Math.round((img.height - sh)/2);
+  }
+  sx = Math.max(0, Math.min(sx, img.width-1));
+  sy = Math.max(0, Math.min(sy, img.height-1));
+
+  ctx.clearRect(0,0,N,N);
+  ctx.drawImage(img, sx, sy, sw, sh, 0, 0, N, N);
+
+  const up = document.createElement('canvas');
+  const scale = Math.floor(256 / Math.max(N,1));
+  up.width = N * scale; up.height = N * scale;
+  const upCtx = up.getContext('2d');
+  upCtx.imageSmoothingEnabled = false;
+  upCtx.drawImage(work, 0, 0, up.width, up.height);
+  preview.src = up.toDataURL('image/png');
+
+  lastImageData = ctx.getImageData(0,0,N,N);
+}
+
+generateBtn.addEventListener('click', ()=>{
+  if(!lastImageData){ alert('Image not ready.'); return; }
+  const N = parseInt(sizeSel.value,10);
+  const target = targetSel.value;
+  const version = versionSelect.value;
+  const shaderText = makeShaderText(lastImageData, N, N, target, version);
+  editor.value = shaderText;
+  downloadBtn.disabled = false;
+  downloadPreviewBtn.disabled = false;
+  copyBtn.disabled = false;
+
+  downloadBtn.onclick = ()=>downloadTextAsFile(shaderText, `image_shader_${N}x${N}_${target}${target==='editor'?('_v'+version):''}.frag`);
+  downloadPreviewBtn.onclick = ()=>downloadCanvasAsPng(lastImageData, N, `preview_${N}x${N}.png`);
+});
+
+copyBtn.addEventListener('click', async ()=>{
+  try{
+    await navigator.clipboard.writeText(editor.value);
+    copyBtn.textContent = 'Copied ✓';
+    setTimeout(()=>copyBtn.textContent='Copy',1200);
+  }catch(e){
+    alert('Copy failed — please select and copy manually.');
+  }
+});
+
+function downloadTextAsFile(text, filename){
+  const b = new Blob([text], {type:'text/plain'});
+  const url = URL.createObjectURL(b);
+  const a = document.createElement('a');
+  a.href = url; a.download = filename; document.body.appendChild(a);
+  a.click(); a.remove(); URL.revokeObjectURL(url);
+}
+
+function downloadCanvasAsPng(imageData, N, filename){
+  const tmp = document.createElement('canvas');
+  tmp.width = N; tmp.height = N;
+  tmp.getContext('2d').putImageData(imageData,0,0);
+  tmp.toBlob((blob)=>{
+    const url = URL.createObjectURL(blob);
+    const a = document.createElement('a');
+    a.href = url; a.download = filename; document.body.appendChild(a);
+    a.click(); a.remove(); URL.revokeObjectURL(url);
+  }, 'image/png');
+}
+
+/*
+  For GL100: arrays with explicit large constructors are not supported in many editors.
+  We generate a fallback lookup function `vec4 getPixel(int idx)` that returns each pixel via if-chain.
+  This is verbose but compatible with legacy GLSL (GL 100).
+*/
+
+function makeShaderText(imgData, W, H, targetMode, versionFlag){
+  const pixels = imgData.data;
+  const total = W*H;
+  const vals = [];
+  for(let i=0;i<total;i++){
+    const j = i*4;
+    const r = (pixels[j]/255).toFixed(4);
+    const g = (pixels[j+1]/255).toFixed(4);
+    const b = (pixels[j+2]/255).toFixed(4);
+    const a = (pixels[j+3]/255).toFixed(4);
+    vals.push(`vec4(${r}, ${g}, ${b}, ${a})`);
   }
 
-  const pixelsBlock = "const vec3 PIXELS[256] = vec3[256](\n" + lines.join("\n") + "\n);";
+  // chunked string builder for readability in the generated shader
+  const chunk = 8;
+  const arrLines = [];
+  for(let i=0;i<vals.length;i+=chunk){
+    arrLines.push('  ' + vals.slice(i,i+chunk).join(', '));
+  }
 
-  const shader = [
-    "#version 300 es",
-    "precision mediump float;",
-    "precision mediump int;",
-    "out vec4 fragColor;",
-    "uniform vec2 resolution;",
-    pixelsBlock,
-    "void main(){",
-    "  vec2 uv=(gl_FragCoord.xy-vec2(0.5))/resolution;",
-    "  int ix=int(clamp(floor(uv.x*16.0),0.0,15.0));",
-    "  int iy=int(clamp(floor(uv.y*16.0),0.0,15.0));",
-    "  int row_top=15-iy;",
-    "  int idx=row_top*16+ix;",
-    "  vec3 col=PIXELS[idx];",
-    "  fragColor=vec4(col,1.0);",
-    "}"
-  ].join("\n");
+  if(targetMode === 'shadertoy'){
+    // Shadertoy: use mainImage, built-ins (iResolution, iTime, iMouse)
+    return `// Shadertoy-ready shader — size: ${W}x${H}
+precision mediump float;
 
-  return shader;
+const int W = ${W};
+const int H = ${H};
+const int TOTAL = ${total};
+${genPixelsArrayOrFallback(vals, total, /*forceFallback=*/false)}
+
+vec4 samplePixel(ivec2 p){
+  int x = clamp(p.x, 0, W-1);
+  int y = clamp(p.y, 0, H-1);
+  int idx = y * W + x;
+  return getPixel(idx);
 }
 
-function createPreviewBlob(img16Canvas){
-  const up = document.createElement('canvas');
-  up.width = 256; up.height = 256;
-  const ctx = up.getContext('2d');
-  ctx.imageSmoothingEnabled = false;
-  ctx.drawImage(img16Canvas, 0, 0, 16, 16, 0, 0, 256, 256);
-  return new Promise(resolve => up.toBlob(resolve, 'image/png'));
+vec4 sampleUV(vec2 uv){
+  uv = clamp(uv, 0.0, 1.0);
+  int x = int(floor(uv.x * float(W)));
+  int y = int(floor(uv.y * float(H)));
+  return samplePixel(ivec2(x,y));
 }
 
-fileInput.addEventListener('change', () => {
-  const f = fileInput.files[0];
-  if(!f) return;
-  const img = new Image();
-  const reader = new FileReader();
-  reader.onload = e => img.src = e.target.result;
-  reader.readAsDataURL(f);
+void mainImage(out vec4 fragColor, in vec2 fragCoord){
+  vec2 uv = fragCoord.xy / iResolution.xy;
+  fragColor = sampleUV(uv);
+}
+`;
+  } else {
+    // Shader Editor mode: add uniforms resolution,time,touch
+    const uniforms = `uniform vec2 resolution;\nuniform float time;\nuniform vec2 touch;\n`;
+    if(versionFlag === '300'){
+      return `#version 300 es
+precision highp float;
+${uniforms}
+out vec4 fragColor;
+const int W = ${W};
+const int H = ${H};
+const int TOTAL = ${total};
+${genPixelsArrayOrFallback(vals, total, /*forceFallback=*/false)}
 
-  img.onload = async () => {
-    const tmp = document.createElement('canvas');
-    tmp.width = img.width; tmp.height = img.height;
-    const tctx = tmp.getContext('2d', {alpha: true});
-    tctx.drawImage(img, 0, 0);
+vec4 samplePixel(ivec2 p){
+  int x = clamp(p.x, 0, W-1);
+  int y = clamp(p.y, 0, H-1);
+  int idx = y * W + x;
+  return getPixel(idx);
+}
 
-    const c = document.createElement('canvas');
-    c.width = 16; c.height = 16;
-    const ctx = c.getContext('2d', {alpha: true});
-    ctx.imageSmoothingEnabled = false;
-    ctx.drawImage(tmp, 0, 0, tmp.width, tmp.height, 0, 0, 16, 16);
+vec4 sampleUV(vec2 uv){
+  uv = clamp(uv, 0.0, 1.0);
+  int x = int(floor(uv.x * float(W)));
+  int y = int(floor(uv.y * float(H)));
+  return samplePixel(ivec2(x,y));
+}
 
-    const imgData = ctx.getImageData(0,0,16,16).data;
+void main(){
+  vec2 uv = gl_FragCoord.xy / resolution.xy;
+  fragColor = sampleUV(uv);
+}
+`;
+    } else {
+      // GL 100 legacy: do NOT use array constructor initialization — use function fallback
+      return `precision mediump float;
+${uniforms}
+const int W = ${W};
+const int H = ${H};
+const int TOTAL = ${total};
+${genPixelsArrayOrFallback(vals, total, /*forceFallback=*/true)}
 
-    const shader = buildShaderFromImage(f.name, imgData);
-    out.textContent = shader;
+vec4 samplePixel(ivec2 p){
+  int x = clamp(p.x, 0, W-1);
+  int y = clamp(p.y, 0, H-1);
+  int idx = y * W + x;
+  return getPixel(idx);
+}
 
-    const previewCanvas = document.createElement('canvas');
-    previewCanvas.width = 256; previewCanvas.height = 256;
-    const pctx = previewCanvas.getContext('2d');
-    pctx.imageSmoothingEnabled = false;
-    pctx.drawImage(c, 0, 0, 16, 16, 0, 0, 256, 256);
-    previewImg.src = previewCanvas.toDataURL('image/png');
+vec4 sampleUV(vec2 uv){
+  uv = clamp(uv, 0.0, 1.0);
+  int x = int(floor(uv.x * float(W)));
+  int y = int(floor(uv.y * float(H)));
+  return samplePixel(ivec2(x,y));
+}
 
-    const shaderBlob = new Blob([shader], {type: 'text/plain'});
-    const shaderUrl = URL.createObjectURL(shaderBlob);
-    downloadShader.href = shaderUrl;
-    downloadShader.download = f.name.replace(/\.[^.]+$/, '') + "_16x16.frag";
-    btnShader.disabled = false;
+void main(){
+  vec2 uv = gl_FragCoord.xy / resolution.xy;
+  gl_FragColor = sampleUV(uv);
+}
+`;
+    }
+  }
+}
 
-    const previewBlob = await createPreviewBlob(c);
-    const prevUrl = URL.createObjectURL(previewBlob);
-    downloadPreview.href = prevUrl;
-    downloadPreview.download = f.name.replace(/\.[^.]+$/, '') + "_preview_256.png";
-    btnPreview.disabled = false;
-  };
-});
+// Helper: generate either a static const array (for contexts that accept it) OR a fallback function getPixel(idx).
+// For GL100 we force fallback because many editors don't accept vec4[...] constructors.
+function genPixelsArrayOrFallback(vals, total, forceFallback){
+  // If not forcing fallback and total is small, try array initializer - but we still support fallback universally.
+  // To be safe, produce a small array initializer for GLES300; for GL100 we MUST use fallback.
+  if(!forceFallback){
+    // produce a const vec4 pixels[...] array and a simple getPixel that indexes it.
+    const arrLines = [];
+    for(let i=0;i<vals.length;i+=8){
+      arrLines.push('  ' + vals.slice(i,i+8).join(', '));
+    }
+    return `const vec4 pixels[TOTAL] = vec4[TOTAL](\n${arrLines.join(',\n')}\n);\n\nvec4 getPixel(int idx){\n  return pixels[idx];\n}\n`;
+  } else {
+    // fallback: generate a getPixel function with if-chain (compatible with GL100)
+    // Build in chunks to avoid extremely long single string concatenations in some environments.
+    let out = 'vec4 getPixel(int idx){\n';
+    // Use a chain of if statements
+    for(let i=0;i<vals.length;i++){
+      out += `  if(idx==${i}) return ${vals[i]};\n`;
+    }
+    out += '  return vec4(0.0,0.0,0.0,0.0);\n}\n';
+    return out;
+  }
+}
+
+// Initialize
+disableAll();
 </script>
 </body>
 </html>
